add FindStylist method

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
       {
           <div class="row">
             <div class="col-12-sm">
-              @stylist.GetName()
+              @stylist.GetName(), @stylist.GetId()
             </div>
           </div>
       }
