--- a/HairSalon/Views/Stylist/Index.cshtml
+++ b/HairSalon/Views/Stylist/Index.cshtml
@@ -24,7 +24,7 @@
     <div class="col-sm-6">
       <div class="well">
         <h3>Add A New Stylist</h3>
-        <form action="/stylist-list" method="post">
+        <form action="/stylists" method="post">
           <div class="form-group">
             <label for="stylist-name">Stylist Name</label>
             <input type="text" class="form-control" id="stylist-name" name="stylist-name">
