--- a/HairSalon/Views/Stylist/StylistInfo.cshtml
+++ b/HairSalon/Views/Stylist/StylistInfo.cshtml
@@ -9,3 +9,9 @@
 {
     <li>@client.GetName()</li>
 }
+
+<a href="/stylists">Back to Stylist Page</a>
+<br>
+<a href="/">To Home Page</a>
+<br>
+<a href="/clients">To Client Page</a>
