commit for 5pm deadline

--- a/HairSalon/Views/Client/ClientInfo.cshtml
+++ b/HairSalon/Views/Client/ClientInfo.cshtml
@@ -6,3 +6,9 @@
   <h3>@Model.GetName()</h3>
   <p>Name: @Model.GetName()</p>
 </div>
+
+<a href="/clients">Back to Clients Page</a>
+<br>
+<a href="/">To Home Page</a>
+<br>
+<a href="/stylists">To Stylists Page</a>
