--- a/HairSalon/Views/Client/Index.cshtml
+++ b/HairSalon/Views/Client/Index.cshtml
@@ -43,4 +43,9 @@
       </form>
     </div>
   </div>
+
+
+  <a href="/">To Home Page</a>
+  <br>
+  <a href="/stylists">To Stylist Page</a>
 </div>
