--- a/HairSalon/Views/Stylist/Index.cshtml
+++ b/HairSalon/Views/Stylist/Index.cshtml
@@ -33,4 +33,8 @@
         </form>
       </div>
     </div>
+
+    <a href="/">To Home Page</a>
+    <br>
+    <a href="/clients">To Client Page</a>
   </div>
