--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <h1>Welcome To The Salon</h1>
-<p>Are you looking to searching for/adding clients or stylists?</p>
 
-<a href="/stylists">Stylists</a>
+
+<a href="/stylists" class="btn btn-info">Add/View Stylists</a>
 <br>
-<a href="/clients">Clients</a>
+<a href="/clients" class="btn btn-info">Add/View Clients</a>
