--- a/HairSalon/Views/Stylist/ViewAllStylists.cshtml
+++ b/HairSalon/Views/Stylist/ViewAllStylists.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class='container'>
-  <h3>Get Stylist Information</h3>
+  <h3>Our Stylists</h3>
   <div class="row">
     <div class="col-sm-3">
       <strong>Name</strong>
