--- a/HairSalon/Views/Client/ClientInfo.cshtml
+++ b/HairSalon/Views/Client/ClientInfo.cshtml
@@ -1,32 +1,30 @@
 @{
   Layout = "_Layout";
 }
-
-<div class="well">
-  <h3>@Model.Name</h3>
-  <p>Current Stylists</p>
-    <ul>
-    @foreach (var stylist in Model.GetStylists())
+<div class="container">
+  <h1>@Model.Name</h1>
+  <h3>Stylists</h3>
+  <ul>
+    @foreach (var stylist in Model.GetStylistList())
     {
         <li>@stylist.Name</li>
     }
-    </ul>
-  <form action="/clients/@Model.Id" method="post">
-    <div class="form-group">
-      <label for="addedStylistId">Add A Stylist</label>
-      <select name="addedStylistId" class="form-control">
+  </ul>
+
+  <h4>Add A Stylist</h4>
+  <form action="/clients/@Model.Id/addstylist" method="post">
+    <select name="addedStylistId" class="form-control form-control-sm">
         @foreach (var stylist in Model.GetAllStylists())
         {
             <option value="@stylist.Id">@stylist.Name</option>
         }
-      </select>
-    </div>
-    <button type="submit">Add</button>
+    </select>
+    <button type="submit" class="btn btn-info">Add Stylist</button>
+  </form>
+
+  <a href="/clients/@Model.Id/edit" class="btn btn-info">Edit @Model.Name</a>
+  <br>
+  <form action="/clients/@Model.Id/delete" method="post">
+    <button type="submit" class="btn btn-danger">Delete @Model.Name</button>
   </form>
 </div>
-
-<a href="/clients">Back to Clients Page</a>
-<br>
-<a href="/">To Home Page</a>
-<br>
-<a href="/stylists">To Stylists Page</a>
