--- a/HairSalon/Views/Client/ViewAllClients.cshtml
+++ b/HairSalon/Views/Client/ViewAllClients.cshtml
@@ -19,17 +19,17 @@
               @client.Name
             </div>
             <div class="col-sm-2">
-              <a href="/clients/@client.Id" class="btn btn-info">Client Info</a>
+              <a href="/clients/@client.Id" class="btn btn-info btn-sm">Client Info</a>
             </div>
             <div class="col-sm-2">
-              <a href="/clients/@client.Id/delete" class="btn btn-danger">Delete Client</a>
+              <a href="/clients/@client.Id/delete" class="btn btn-danger btn-sm">Delete Client</a>
             </div>
           </div>
         }
   <div>
-    <a href="/stylists/new" class="btn btn-info">Create New Client</a>
+    <a href="/stylists/new" class="btn btn-info btn-sm">Create New Client</a>
     <br>
-    <a href="/stylists/delete-all" class="btn btn-danger">Delete All Clients</a>
+    <a href="/stylists/delete-all" class="btn btn-danger btn-sm">Delete All Clients</a>
   </div>
 
 </div>
