--- a/HairSalon/Views/Service/ServiceInfo.cshtml
+++ b/HairSalon/Views/Service/ServiceInfo.cshtml
@@ -17,6 +17,6 @@
             <option value="@stylist.Id">@stylist.Name</option>
         }
     </select>
-    <button type="submit">Add Stylist</button>
+    <button type="submit" class="btn btn-info">Add Stylist</button>
   </form>
 </div>
