--- a/HairSalon/Views/Stylist/ViewAllStylists.cshtml
+++ b/HairSalon/Views/Stylist/ViewAllStylists.cshtml
@@ -28,7 +28,9 @@
             <a href="/stylists/@stylist.Id" class="btn btn-info btn-sm">Stylist Info</a>
           </div>
           <div class="col-sm-2">
-            <a href="/stylists/@stylist.Id/delete" class="btn btn-danger btn-sm">Delete Stylist</a>
+            <form action="/stylists/@stylist.Id/delete" method="post">
+              <button type="submit" class="btn btn-danger btn-sm">Delete Stylist</button>
+            </form>
           </div>
       }
   </div>
