--- a/HairSalon/Views/Client/ViewAllClients.cshtml
+++ b/HairSalon/Views/Client/ViewAllClients.cshtml
@@ -22,7 +22,9 @@
               <a href="/clients/@client.Id" class="btn btn-info btn-sm">Client Info</a>
             </div>
             <div class="col-sm-2">
-              <a href="/clients/@client.Id/delete" class="btn btn-danger btn-sm">Delete Client</a>
+              <form action="/clients/@client.Id/delete" method="post">
+                <button type="submit" class="btn btn-danger btn-sm">Delete Client</button>
+              </form>
             </div>
           </div>
         }
