--- a/HairSalon/Views/Client/ViewAllClients.cshtml
+++ b/HairSalon/Views/Client/ViewAllClients.cshtml
@@ -29,9 +29,11 @@
           </div>
         }
   <div>
-    <a href="/stylists/new" class="btn btn-info btn-sm">Create New Client</a>
+    <a href="/clients/new" class="btn btn-info btn-sm">Create New Client</a>
     <br>
-    <a href="/stylists/delete-all" class="btn btn-danger btn-sm">Delete All Clients</a>
+    <form action="/clients/deleteall" method="post">
+      <button type="submit" class="btn btn-danger btn-sm">Delete All Clients</button>
+    </form>
   </div>
 
 </div>
