--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,9 +2,4 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome To The Salon</h1>
-
-
-<a href="/stylists" class="btn btn-info">Add/View Stylists</a>
-<br>
-<a href="/clients" class="btn btn-info">Add/View Clients</a>
+<h1 id="home-page-header">Welcome To Snappy Snips</h1>
