--- a/HairSalon/Views/Service/ViewAllServices.cshtml
+++ b/HairSalon/Views/Service/ViewAllServices.cshtml
@@ -3,10 +3,10 @@
 }
 
 <div class='container'>
-  <h3>Our Services</h3>
+  <h1>Our Services</h1>
       @foreach (var service in Model)
         {
-          <div class="row">
+          <div class="row row-decor">
             <div class="col-sm-8">
               @service.Name
             </div>
