--- a/HairSalon/Views/Client/ViewAllClients.cshtml
+++ b/HairSalon/Views/Client/ViewAllClients.cshtml
@@ -3,18 +3,15 @@
 }
 
 <div class='container'>
-  <h3>Client List</h3>
+  <h1>Client List</h1>
     <div class="row">
-      <div class="col-sm-8">
-        <strong>Name</strong>
-      </div>
-      <div class="col-sm-4">
-        <strong>Options</strong>
+      <div class="col-sm-12">
+        <h4>Name</h4>
       </div>
     </div>
       @foreach (var client in Model)
         {
-          <div class="row">
+          <div class="row row-decor">
             <div class="col-sm-8">
               @client.Name
             </div>
@@ -28,12 +25,15 @@
             </div>
           </div>
         }
-  <div>
-    <a href="/clients/new" class="btn btn-info btn-sm">Create New Client</a>
-    <br>
-    <form action="/clients/deleteall" method="post">
-      <button type="submit" class="btn btn-danger btn-sm">Delete All Clients</button>
-    </form>
+  <div class="bottom-buttons row">
+    <div class="col-sm-2">
+      <a href="/clients/new" class="btn btn-info btn-sm">Create New Client</a>
+    </div>
+    <div class="col-sm-2">
+      <form action="/clients/deleteall" method="post">
+        <button type="submit" class="btn btn-danger btn-sm">Delete All Clients</button>
+      </form>
+    </div>
   </div>
 
 </div>
