--- a/HairSalon/Views/Stylist/EditStylist.cshtml
+++ b/HairSalon/Views/Stylist/EditStylist.cshtml
@@ -10,8 +10,7 @@
                   <label for="newName">Enter New Name</label>
                   <input type="text" id="newName" name="newName" placeholder="@Model.Name" required />
               </div>
-              <button class="btn btn-primary" type="submit">Update</button>
-              <a href="/" class="btn btn-primary">Return to Home</a>
+              <button class="btn btn-info" type="submit">Update</button>
           </form>
       </div>
   </div>
