--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -1,3 +1,27 @@
-.dotted-border {
-  border:black dotted 1px;
+#home-page-header {
+  font-size: 60px;
+  text-align: center;
+  margin-top: 100px;
+}
+
+.row-decor {
+  margin-bottom: 5px;
+  padding: 10px;
+  border: purple dotted 1px;
+  border-radius: 5px;
+}
+
+h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+h3 {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.bottom-buttons {
+  padding: 5px;
 }
